--- a/1.3.html
+++ b/1.3.html
@@ -140,7 +140,10 @@
   <div class="text-container">
     <div class="text-wrap">
       <p class="centered-text">
-        ?
+        Дом с бассейном в Совиньоне<br>
+Дом в Совиньоне площадью 75 м2, участок 10 соток.<br>
+В доме 2 спальни+ кухня студия с раскладной диваном с бассейном , мангал, беседка и парковка на 2 машины.<br>
+Цена 8000-13000грн
       </p>
     </div>
   </div>
