--- a/1.4.html
+++ b/1.4.html
@@ -154,7 +154,14 @@
   <div class="text-container">
     <div class="text-wrap">
       <p class="centered-text">
-        ?
+        Дом с бассейном на 13 станции Фонтана<br>
+Дом в первой линии от моря площадью 320 м2, участок 5 соток.<br>
+в доме 5 комнат, 4 спальни (10 спальных мест), 4 санузла, большая кухня - студия.<br>
+В каждой комнате 2-х спальная кровать, красивые шкафы-купе, плазменный телевизор, кондиционер.<br>
+В доме две террасы, одна из которых с выходом на бассейн, барбекю.<br>
+Закрытый двор, не просматриваемая территория, пульт охраны, место для двух автомобилей во дворе, WI-FI, кабельное телевидение.<br>
+Цена 250-450$<br>
+От 2х дней
       </p>
     </div>
   </div>
