--- a/1.5.html
+++ b/1.5.html
@@ -164,7 +164,10 @@
   <div class="text-container">
     <div class="text-wrap">
       <p class="centered-text">
-        ?
+        Вилла возле моря на 10 станции.<br>
+Дом площадью 450 м2, участок 12 соток.<br>  
+От дома 50 метров до пляжа. В Доме 4 шикарные спальни (из каждой вид на море) Просторный зал.<br>
+Цена 36000грн
       </p>
     </div>
   </div>
