--- a/index.html
+++ b/index.html
@@ -347,6 +347,22 @@
     <h3>Для отдыха и мероприятий</h3>
     <a href="1.6.html" target="_blank" class="button">Подробнее</a>
   </div>
+  <div class="house-card">
+    <h2><a href="1.7fontanka.html" target="_blank">Дом c бассейном в крыжановке</a></h2>
+    <a href="1.7fontanka.html" target="_blank"><img src="img/1.7 фонтанка/image001.png"/></a>
+    <h3>Цена: ?</h3>
+    <h3>Дом: 30м², участок 10 соток</h3>
+    <h3>Для отдыха и мероприятий</h3>
+    <a href="1.7fontanka.html" target="_blank" class="button">Подробнее</a>
+  </div>
+  <div class="house-card">
+    <h2><a href="1.8.html" target="_blank">Дом в Сосновом Берегу</a></h2>
+    <a href="1.8.html" target="_blank"><img src="img/1.8/image001.png"/></a>
+    <h3>Цена: ?</h3>
+    <h3>Дом:150м², участок 10 соток</h3>
+    <h3>Для отдыха</h3>
+    <a href="1.8.html" target="_blank" class="button">Подробнее</a>
+  </div>
   <!-- Вставьте остальные карточки домов аналогичным образом -->
 </div>
 </body>
