--- a/index.html
+++ b/index.html
@@ -14,26 +14,27 @@
     .banner {
       background-color: #007BFF;
       color: white;
-      padding: 1px 1px;
+      padding: 10px 0;
       text-align: center;
+      margin-bottom: 20px;
     }
     .container {
       max-width: 1200px;
       margin: 0 auto;
-      padding: 20px;
       display: flex;
       flex-wrap: wrap;
       justify-content: space-between;
     }
     .house-card {
-      margin-bottom: 20px;
-      border: 1px solid #ccc;
-      padding: 10px;
-      border-radius: 5px;
-      flex-grow: 1;
-      max-width: calc(25% - 40px);
+      width: calc(25% - 30px);
+      margin-bottom: 30px;
+      padding: 15px;
+      border-radius: 10px;
+      box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
       background-color: #fff;
       transition: transform 0.3s ease;
+      overflow: hidden;
+      position: relative;
       display: flex;
       flex-direction: column;
     }
@@ -41,55 +42,49 @@
       transform: translateY(-5px);
     }
     .house-card img {
-      display: block;
-      margin: 0 auto 10px;
-      border-radius: 5px;
       width: 100%;
       height: 200px;
       object-fit: cover;
+      border-radius: 10px;
+      transition: transform 0.3s ease;
+    }
+    .house-card:hover img {
+      transform: scale(1.05);
     }
     .house-card h2 a {
       text-decoration: none;
       color: #333;
-      font-size: 16px;
+      font-size: 18px;
+      margin-bottom: 10px;
+      display: block;
     }
     .house-card h3 {
-      margin: 3px;
+      margin: 5px 0;
       font-size: 14px;
+      color: #666;
     }
     .button {
-      width: 100%;
-      padding: 10px 0;
-      text-align: center;
-      margin-top: auto; /* Выравниваем кнопку внизу карточки */
+      width: auto;
+      padding: 10px 20px;
+      margin-top: auto; /* Поместить кнопку внизу карточки */
       background-color: #007BFF;
       color: white;
       border-radius: 5px;
       text-decoration: none;
+      text-align: center;
+      transition: background-color 0.3s ease;
+    }
+    .button:hover {
+      background-color: #0056b3;
+    }
+    @media only screen and (max-width: 900px) {
+      .house-card {
+        width: calc(50% - 20px);
+      }
     }
     @media only screen and (max-width: 600px) {
-      .container {
-        padding: 10px;
-      }
       .house-card {
         width: calc(100% - 20px);
-        max-width: none;
-        margin-right: 0;
-        margin-left: 0;
-      }
-      .house-card:hover {
-        transform: none;
-      }
-      .house-card h3 {
-        font-size: 12px;
-      }
-    }
-    @media only screen and (min-width: 601px) and (max-width: 1024px) {
-      .house-card {
-        width: calc(50% - 30px);
-        max-width: none;
-        margin-right: 0;
-        margin-left: 0;
       }
     }
   </style>
