--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <title>Список домов</title>
   <style>
     body {
-      font-family: Arial, sans-serif;
+      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
       margin: 0;
       padding: 0;
       background-color: #f0f0f0;
@@ -31,7 +31,7 @@
       padding: 15px;
       border-radius: 10px;
       box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-      background-color: #fff;
+      background-color: #ffffff;
       transition: transform 0.3s ease;
       overflow: hidden;
       position: relative;
@@ -61,7 +61,7 @@
     .house-card h3 {
       margin: 5px 0;
       font-size: 14px;
-      color: #666;
+      color: #666666;
     }
     .button {
       width: auto;
