--- a/index.html
+++ b/index.html
@@ -358,6 +358,14 @@
     <h3>Для отдыха</h3>
     <a href="1.8.html" target="_blank" class="button">Подробнее</a>
   </div>
+  <div class="house-card">
+    <h2><a href="1.9.html" target="_blank">?</a></h2>
+    <a href="1.9.html" target="_blank"><img src="img/1.9/images1000x700.jpg"/></a>
+    <h3>Цена: ?</h3>
+    <h3>Дом:?м², участок ? соток</h3>
+    <h3>?</h3>
+    <a href="1.9.html" target="_blank" class="button">Подробнее</a>
+  </div>
   <!-- Вставьте остальные карточки домов аналогичным образом -->
 </div>
 </body>
