--- a/index.html
+++ b/index.html
@@ -345,7 +345,7 @@
   <div class="house-card">
     <h2><a href="1.7fontanka.html" target="_blank">Дом c бассейном в крыжановке</a></h2>
     <a href="1.7fontanka.html" target="_blank"><img src="img/1.7 фонтанка/image001.png"/></a>
-    <h3>Цена: ?</h3>
+    <h3>Цена:9000-15000</h3>
     <h3>Дом: 30м², участок 10 соток</h3>
     <h3>Для отдыха и мероприятий</h3>
     <a href="1.7fontanka.html" target="_blank" class="button">Подробнее</a>
@@ -353,7 +353,7 @@
   <div class="house-card">
     <h2><a href="1.8.html" target="_blank">Дом в Сосновом Берегу</a></h2>
     <a href="1.8.html" target="_blank"><img src="img/1.8/image001.png"/></a>
-    <h3>Цена: ?</h3>
+    <h3>Цена:10000-15000грн</h3>
     <h3>Дом:150м², участок 10 соток</h3>
     <h3>Для отдыха</h3>
     <a href="1.8.html" target="_blank" class="button">Подробнее</a>
@@ -361,9 +361,9 @@
   <div class="house-card">
     <h2><a href="1.9.html" target="_blank">?</a></h2>
     <a href="1.9.html" target="_blank"><img src="img/1.9/images1000x700.jpg"/></a>
-    <h3>Цена: ?</h3>
-    <h3>Дом:?м², участок ? соток</h3>
-    <h3>?</h3>
+    <h3>Цена:Цена:200-300$</h3>
+    <h3>Дом:100м², участок 4 соток</h3>
+    <h3>Для семейного отдыха и мероприятий, от 3х суток</h3>
     <a href="1.9.html" target="_blank" class="button">Подробнее</a>
   </div>
   <!-- Вставьте остальные карточки домов аналогичным образом -->
