--- a/1.7fontanka.html
+++ b/1.7fontanka.html
@@ -156,9 +156,9 @@
   <div class="text-container">
     <div class="text-wrap">
       <p class="centered-text">
-        Дом в крыжановке площадью 30м2.<br>
+        Дом в Фонтанке площадью 30м2.<br>
         Расположен на 10 сотках земли.<br>
-        Для компаний до 10 чел (без ночевки) Максимальное количество гостей 15 человек (без ночевки). Стол рассчитан на 10 человек.<br>
+        Для компаний до 10 чел (без ночевки) Максимальное количество гостей 15 человек (без ночевки). Стол рассчитан на 10 человек + круглый стол на 6 человек.<br>
         Спальных мест на 2 человека + 2 ребенока: одна двуспальная кровать и диванчик на фото не раскладные (ширина 1,30- поместится только ребенок).<br>
         Есть акустическую систему- можно включать музыку (входит в стоимость), а также шампура и решетка для мангала, посуда.<br>
         Бассейн 9х3.5м и 1.50 глубина, подогрев от солнечных панелей. Вода в бассейне фильтруется, хлорирована, +бассейн чиститься каждое утро.<br>
