--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
     <a href="igorsavik.html" target="_blank"><img src="img/игорь савик/1.jpeg" alt="Дом с бассейном в Совиньоне"/></a>
     <h3>Цена:350-500$</h3>
     <h3>Дом:300м², участок 11 соток</h3>
-    <h3>Для семейного отдыха</h3>
+    <h3>Для семейного отдыха, от 3х дней</h3>
     <a href="igorsavik.html" target="_blank" class="button">Подробнее</a>
   </div>
   <div class="house-card">
