--- a/index.html
+++ b/index.html
@@ -359,7 +359,7 @@
     <a href="1.8.html" target="_blank" class="button">Подробнее</a>
   </div>
   <div class="house-card">
-    <h2><a href="1.9.html" target="_blank">?</a></h2>
+    <h2><a href="1.9.html" target="_blank">Дом с бассейном в Совиньоне</a></h2>
     <a href="1.9.html" target="_blank"><img src="img/1.9/images1000x700.jpg"/></a>
     <h3>Цена:Цена:200-300$</h3>
     <h3>Дом:100м², участок 4 соток</h3>
