--- a/1.9.html
+++ b/1.9.html
@@ -144,19 +144,10 @@
   <div class="text-container">
     <div class="text-wrap">
       <p class="centered-text">
-        Комнаты на 3 этажах с собственными ванными комнатами
-        Есть возможность снять отдельные номера, так же можно снять весь дом
-        Всего 9 номеров.
-        1 двухместный номер,
-        2 комнаты для семейного отдыха, могут разместиться 4 человека.
-        7 двухместных номеров.
-        Всего 24 спальных места
-        Есть банкетный зал на 30 человек
-        Есть мангал и гриль
-        Бассейн 1.7 метра глубиной
-        Можно с животными
-        100- 900$
-        В зависимости от дня недели, количества суток и количества гостей
+      Дом площадью 100м2, участок 4 сотки, находится у моря, "Совиньон"-1.<br> 
+В доме есть 2 спальни, кухня- студия, мебель, техника, посуда, бассейн, мангал, лужайка, парковка на несколько автомобилей. Пару минут до моря.<br> 
+От 3х дней<br>
+Цена 200-300$
       </p>
     </div>
   </div>
