--- a/index.html
+++ b/index.html
@@ -361,10 +361,18 @@
   <div class="house-card">
     <h2><a href="1.9.html" target="_blank">Дом с бассейном в Совиньоне</a></h2>
     <a href="1.9.html" target="_blank"><img src="img/1.9/images1000x700.jpg"/></a>
-    <h3>Цена:Цена:200-300$</h3>
+    <h3>Цена:200-300$</h3>
     <h3>Дом:100м², участок 4 соток</h3>
     <h3>Для семейного отдыха и мероприятий, от 3х суток</h3>
     <a href="1.9.html" target="_blank" class="button">Подробнее</a>
+  </div>
+  <div class="house-card">
+    <h2><a href="2.0.html" target="_blank">Номера с бассейном в черноморке 200 метров от моря</a></h2>
+    <a href="2.0.html" target="_blank"><img src="img/2.0/images1000x700.jpg"/></a>
+    <h3>Цена:1100-1600грн номер</h3>
+    <h3>Общая площадь 250м², участок 5 соток</h3>
+    <h3>Для семейного отдыха и мероприятий</h3>
+    <a href="2.0.html" target="_blank" class="button">Подробнее</a>
   </div>
   <!-- Вставьте остальные карточки домов аналогичным образом -->
 </div>
