--- a/2.0.html
+++ b/2.0.html
@@ -180,7 +180,7 @@
         Общая площадь 250м2, участок 5 соток.<br>
         Есть 7 номеров по 3 спальных места (кровать двухспальная +раскладушка).<br>
         номера у моря с бассейном, банкетным залом, сауной. Банкетный зал вмещает до 40 человек. По желанию есть питание.<br>
-        1100- 1600 грн номер.<br>
+        1500-1800 грн номер.<br>
       </p>
     </div>
   </div>
