--- a/lititsiya.html
+++ b/lititsiya.html
@@ -160,7 +160,7 @@
         7 с/у,
         бассейн на улице
         место для 2 автомобилей и еще 1 в гараже
-        Будние 700, выходные 1000$
+        Цена 700-1000$
       </p>
     </div>
   </div>
