--- a/2.1 zel dom.html
+++ b/2.1 zel dom.html
@@ -12,12 +12,11 @@
       display: flex;
       flex-direction: column;
       min-height: 100vh;
-      font-family: Arial, sans-serif;
     }
     .banner {
       background-color: #007BFF;
       color: white;
-      padding: 10px;
+      padding: 1px 1px;
       text-align: center;
     }
 
@@ -29,7 +28,6 @@
     }
 
     .slider-container {
-      position: relative;
       width: 100%;
       overflow: hidden;
       margin-top: 10px;
@@ -38,18 +36,28 @@
 
     .slider {
       display: flex;
-      flex-direction: row;
-      transition: transform 0.5s ease;
+      flex-direction: column;
     }
 
     .slide {
       flex: 0 0 auto;
       width: 100%;
+      display: none;
+      opacity: 0;
+    }
+
+    .slide.active {
+      display: block;
+      opacity: 1;
+      transition: opacity 0.5s ease;
     }
 
     .slide img {
       max-width: 100%;
+      max-height: 100%;
+      width: auto;
       height: auto;
+      object-fit: contain;
     }
 
     .text-container {
@@ -68,7 +76,7 @@
     }
 
     .button {
-      padding: 10px 20px;
+      padding: 5px 10px;
       text-decoration: none;
       background-color: #007bff;
       color: #fff;
@@ -82,26 +90,6 @@
       background-color: #0056b3;
     }
 
-    .prev, .next {
-      position: absolute;
-      top: 50%;
-      transform: translateY(-50%);
-      background-color: rgba(0, 0, 0, 0.5);
-      color: white;
-      padding: 10px;
-      border: none;
-      cursor: pointer;
-      transition: background-color 0.3s ease;
-    }
-
-    .prev {
-      left: 10px;
-    }
-
-    .next {
-      right: 10px;
-    }
-
     @media only screen and (min-width: 768px) {
       .slider-container {
         height: 60vh;
@@ -112,6 +100,7 @@
       }
 
       .slide img {
+        max-width: 100%;
         max-height: 60vh;
       }
     }
@@ -119,52 +108,57 @@
 </head>
 <body>
 <div class="banner">
-  <p>Андрей: 0688504971</p>
+  <p>Андрей:0688504971</p>
 </div>
 <main>
   <div class="slider-container">
-    <button class="prev" onclick="prevSlide()">❮</button>
     <div class="slider" ontouchstart="handleTouchStart(event)" ontouchend="handleTouchEnd(event)">
       <div class="slide active">
-        <img src="img/Новая папка/бнб пол дома/гланая.jpeg" alt="Главный снимок"/>
-      </div>
+        <img src="img/2.1zel dom/1.jpg"/></div>
+        <div class="slide">
+          <img src="img/2.1zel dom/2.jpg"/></div>
+          <div class="slide">
+            <img src="img/2.1zel dom/3.jpg"/></div>
+            <div class="slide">
+              <img src="img/2.1zel dom/4.jpg"/></div>
+              <div class="slide">
+                <img src="img/2.1zel dom/5.jpg"/></div>
+                <div class="slide">
+                  <img src="img/2.1zel dom/6.jpg"/></div>
+                  <div class="slide">
+                    <img src="img/2.1zel dom/7.jpg"/></div>
+                    <div class="slide">
+                      <img src="img/2.1zel dom/8.jpg"/></div>
+                      <div class="slide">
+                        <img src="img/2.1zel dom/9.jpg"/></div>
+                        <div class="slide">
+                          <img src="img/2.1zel dom/10.jpg"/></div>
+                          <div class="slide">
+                            <img src="img/2.1zel dom/11.jpg"/></div>
+                            <div class="slide">
+                              <img src="img/2.1zel dom/12.jpg"/></div>
+                              <div class="slide">
+                                <img src="img/2.1zel dom/13.jpg"/></div>
       <div class="slide">
-        <img src="img/Новая папка/бнб пол дома/басик2.jpeg" alt="Бассик 2"/>
-      </div>
-      <div class="slide">
-        <img src="img/Новая папка/бнб пол дома/двор.jpeg" alt="Двор"/>
-      </div>
-      <!-- Добавьте остальные слайды по аналогии -->
-    </div>
-    <button class="next" onclick="nextSlide()">❯</button>
-  </div>
-  <div class="button-container">
-    <button class="button" onclick="prevSlide()">Назад</button>
-    <button class="button" onclick="nextSlide()">Вперед</button>
-  </div>
+                                <img src="img/2.1zel dom/14.jpg"/></div>
+                              <!-- Добавьте другие слайды по аналогии -->
+                            </div>
+                          </div>
+                          <div class="button-container">
+                            <button class="button" onclick="prevSlide()">Назад</button>
+                            <button class="button" onclick="nextSlide()">Вперед</button>
+                          </div>
 
-  <div class="text-container">
-    <div class="text-wrap">
-      <p class="centered-text">
-        Комнаты на 3 этажах с собственными ванными комнатами
-        Есть возможность снять отдельные номера, так же можно снять весь дом
-        Всего 9 номеров.
-        1 двухместный номер,
-        2 комнаты для семейного отдыха, могут разместиться 4 человека.
-        7 двухместных номеров.
-        Всего 24 спальных места
-        Есть банкетный зал на 30 человек
-        Есть мангал и гриль
-        Бассейн 1.7 метра глубиной
-        Можно с животными
-        100- 900$
-        В зависимости от дня недели, количества суток и количества гостей
-      </p>
-    </div>
-  </div>
-  <div class="button-container">
-    <a href="index.html" class="button">На главную</a>
-  </div>
+                          <div class="text-container">
+                            <div class="text-wrap">
+                              <p class="centered-text">
+         &&&
+                              </p>
+                            </div>
+                          </div>
+                          <div class="button-container">
+                            <a href="index.html" class="button">На главную</a>
+                          </div>
 </main>
 
 <script>
