--- a/index.html
+++ b/index.html
@@ -374,6 +374,14 @@
     <h3>Для семейного отдыха и мероприятий</h3>
     <a href="2.0.html" target="_blank" class="button">Подробнее</a>
   </div>
+  <div class="house-card">
+    <h2><a href="2.1 zel dom.html" target="_blank">Номера с бассейном в черноморке 200 метров от моря</a></h2>
+    <a href="2.1 zel dom.html" target="_blank"><img src="img/2.1zel dom/1.jpg"/></a>
+    <h3>Цена:7000-10000грн</h3>
+    <h3></h3>
+    <h3>Для отдыха и мероприятий</h3>
+    <a href="2.1 zel dom.html" target="_blank" class="button">Подробнее</a>
+  </div>
   <!-- Вставьте остальные карточки домов аналогичным образом -->
 </div>
 </body>
