--- a/1.8.html
+++ b/1.8.html
@@ -192,7 +192,8 @@
         Площадь дома 150 м2, на участке в 10 соток. Есть бассейн с подогревом и подсветкой.<br>
         Просторная гостиная кухня -барбекю с камином и потрясающим видом на лес. В лесной зоне находится большая беседка с освещением.<br>
         В доме 2 спальни, 2 гардеробные, 1 хоз-помещения. Есть диван на 2-3 спальных места<br>
-        1этажный дом в  "Сосновом берегу"-закрытый частный посёлок, въезд только по пропускам.
+        1этажный дом в  "Сосновом берегу"-закрытый частный посёлок, въезд только по пропускам.<br>
+        Цена:14000-16000грн
       </p>
     </div>
   </div>
