--- a/index.html
+++ b/index.html
@@ -304,7 +304,7 @@
   </div>
   <div class="house-card">
     <h2><a href="1.2.html" target="_blank">Дом в Иличевске с бассейном 1-й линия от моря</a></h2>
-    <a href="1.2.html" target="_blank"><img src="img/1.2/главная.jpg"/></a>
+    <a href="1.2.html" target="_blank"><img src="img/1.2/glav.jpg"/></a>
     <h3>Цена:250-400$</h3>
     <h3>Общая площадь 200м², участок2 сотки</h3>
     <h3>Для отдыха, от 2 дней</h3>
