--- a/1.2.html
+++ b/1.2.html
@@ -114,25 +114,31 @@
   <div class="slider-container">
     <div class="slider" ontouchstart="handleTouchStart(event)" ontouchend="handleTouchEnd(event)">
       <div class="slide active">
-        <img src="img/1.2/главная.jpg"/></div>
+        <img src="img/1.2/glav.jpg"/></div>
         <div class="slide">
-          <img src="img/1.2/стол у басика.jpg"/></div>
+          <img src="img/1.2/1.jpg"/></div>
           <div class="slide">
-            <img src="img/1.2/беседка.jpg"/></div>
+            <img src="img/1.2/2.jpg"/></div>
             <div class="slide">
-              <img src="img/1.2/зал.jpg"/></div>
+              <img src="img/1.2/3.jpg"/></div>
               <div class="slide">
-                <img src="img/1.2/кровать.jpg"/></div>
+                <img src="img/1.2/4.jpg"/></div>
                 <div class="slide">
-                  <img src="img/1.2/кровать1.jpg"/></div>
+                  <img src="img/1.2/5.jpg"/></div>
                   <div class="slide">
-                    <img src="img/1.2/кровать2.jpg"/></div>
+                    <img src="img/1.2/6.jpg"/></div>
                     <div class="slide">
-                      <img src="img/1.2/столовая.jpg"/></div>
+                      <img src="img/1.2/7.jpg"/></div>
                       <div class="slide">
-                        <img src="img/1.2/детская.jpg"/></div>
+                        <img src="img/1.2/8.jpg"/></div>
                         <div class="slide">
-                          <img src="img/1.2/туалет.jpg"/></div>
+                          <img src="img/1.2/9.jpg"/></div>
+                  <div class="slide">
+                    <img src="img/1.2/10.jpg"/></div>
+                    <div class="slide">
+                      <img src="img/1.2/11.jpg"/></div>
+                      <div class="slide">
+                        <img src="img/1.2/12.jpg"/></div>
       <!-- Добавьте другие слайды по аналогии -->
  </div>
   </div>
