--- a/index.html
+++ b/index.html
@@ -223,7 +223,7 @@
     <a href="nadezdahutor.html" target="_blank" class="button">Подробнее</a>
   </div>
   <div class="house-card">
-    <h2><a href="1.html." target="_blank">Дом с бассейном в Совиньоне</a></h2>
+    <h2><a href="1.html" target="_blank">Дом с бассейном в Совиньоне</a></h2>
     <a href="1.html" target="_blank"><img src="img/Новая папка/1/главная.jpg"/></a>
     <h3>Цена:350-500$</h3>
     <h3>Дом:165м², участок 3.5 соток, 8 спальных мест</h3>
@@ -231,7 +231,7 @@
     <a href="1.html" target="_blank" class="button">Подробнее</a>
   </div>
   <div class="house-card">
-    <h2><a href="3.html." target="_blank">Дом на Таирова</a></h2>
+    <h2><a href="3.html" target="_blank">Дом на Таирова</a></h2>
     <a href="3.html" target="_blank"><img src="img/Новая папка/3/диван2.jpg"/></a>
     <h3>Цена:3500-5000грн</h3>
     <h3>Дом:84м², участок 6 соток</h3>
@@ -239,15 +239,14 @@
     <a href="3.html" target="_blank" class="button">Подробнее</a>
   </div>
   <div class="house-card">
-    <h2><a href="4.html." target="_blank">?</a></h2>
+    <h2><a href="4.html" target="_blank">Дом с большим банкетным залом</a></h2>
     <a href="4.html" target="_blank"><img src="img/Новая папка/4/вход.jpg"/></a>
-    <h3>Цена: ?$</h3>
-    <h3>Дом: ?м², ? соток</h3>
-    <h3>Для семейного отдыха и мероприятий</h3>
+    <h3>Цена:10000-14000грн</h3>
+    <h3>Для отдыха и мероприятий</h3>
     <a href="4.html" target="_blank" class="button">Подробнее</a>
   </div>
   <div class="house-card">
-    <h2><a href="2.html." target="_blank">Дом с бассейном в крыжановке</a></h2>
+    <h2><a href="2.html" target="_blank">Дом с бассейном в крыжановке</a></h2>
     <a href="2.html" target="_blank"><img src="img/Новая папка/2/главная.jpg"/></a>
     <h3>Цена:11000-20000грн</h3>
     <h3>Дом:140м², участок 6.5 соток</h3>
@@ -321,7 +320,7 @@
   <div class="house-card">
     <h2><a href="1.4.html" target="_blank">Дом с бассейном на 13 станции Фонтана</a></h2>
     <a href="1.4.html" target="_blank"><img src="img/1.4/1.jpg"/></a>
-    <h3>Цена:400-600$</h3>
+    <h3>Цена:350-600$</h3>
     <h3>Дом:320м², участок 5 соток</h3>
     <h3>Для отдыха и мероприятий, от 2х дней</h3>
     <a href="1.4.html" target="_blank" class="button">Подробнее</a>
@@ -329,7 +328,7 @@
   <div class="house-card">
     <h2><a href="1.5.html" target="_blank">Вилла возле моря на 10 станции</a></h2>
     <a href="1.5.html" target="_blank"><img src="img/1.5/1.jpg"/></a>
-    <h3>Цена:40000грн</h3>
+    <h3>Цена:35150грн</h3>
     <h3>Дом:450м², участок 12 соток</h3>
     <h3>Для отдыха и мероприятий</h3>
     <a href="1.5.html" target="_blank" class="button">Подробнее</a>
@@ -381,6 +380,78 @@
     <h3></h3>
     <h3>Для отдыха и мероприятий</h3>
     <a href="2.1 zel dom.html" target="_blank" class="button">Подробнее</a>
+  </div>
+  <div class="house-card">
+    <h2><a href="2.3.html" target="_blank">Дом с бассейном на Фонтанской дороге</a></h2>
+    <a href="2.3.html " target="_blank"><img src="img/new/1/главная.jpg"/></a>
+    <h3>Цена:700$</h3>
+    <h3>Участок 12 соток</h3>
+    <h3>Для отдыха и мероприятий</h3>
+    <a href="2.3.html " target="_blank" class="button">Подробнее</a>
+  </div>
+  <div class="house-card">
+    <h2><a href="2.4.html" target="_blank">Посуточно номера с бассейном</a></h2>
+    <a href="2.4.html " target="_blank"><img src="img/new/2/Без названия.jpg"/></a>
+    <h3>Цена:1600грн</h3>
+    <h3>Участок 6 сток,Дом 30м²</h3>
+    <h3>Для отдыха</h3>
+    <a href="2.4.html " target="_blank" class="button">Подробнее</a>
+  </div>
+  <div class="house-card">
+    <h2><a href="2.5.html" target="_blank">Апартаменты у моря</a></h2>
+    <a href="2.5.html " target="_blank"><img src="img/new/3/Без названия.jpg"/></a>
+    <h3>Цена:от 5000 грн</h3>
+    <h3>Общая площадь 70м²</h3>
+    <h3>Для отдыха</h3>
+    <a href="2.5.html " target="_blank" class="button">Подробнее</a>
+  </div>
+  <div class="house-card">
+    <h2><a href="2.6.html" target="_blank">Раскошний дом с бассейном</a></h2>
+    <a href="2.6.html " target="_blank"><img src="img/new/4/Без названия.jpg"/></a>
+    <h3>Цена:от 600$</h3>
+    <h3>Общая площадь 800м²</h3>
+    <h3>Для отдыха и мероприятий </h3>
+    <a href="2.6.html " target="_blank" class="button">Подробнее</a>
+  </div>
+  <div class="house-card">
+    <h2><a href="2.7.html" target="_blank">Стильный дом VIP уровня в Совиньоне</a></h2>
+    <a href="2.7.html " target="_blank"><img src="img/new/5/Без названия.jpg"/></a>
+    <h3>Цена:600$</h3>
+    <h3>Участок 8 соток,жилая площадь 320м²</h3>
+    <h3>Для отдыха и мероприятий </h3>
+    <a href="2.7.html " target="_blank" class="button">Подробнее</a>
+  </div>
+  <div class="house-card">
+    <h2><a href="2.8.html" target="_blank">Комфортабельный дом с бассейном в Совиньоне</a></h2>
+    <a href="2.8.html " target="_blank"><img src="img/new/6/Без названия.jpg"/></a>
+    <h3>Цена:400$</h3>
+    <h3>Участок 10 соток,жилая площадь 180м²</h3>
+    <h3>Для отдыха и мероприятий </h3>
+    <a href="2.8.html " target="_blank" class="button">Подробнее</a>
+  </div>
+  <div class="house-card">
+    <h2><a href="2.9.html" target="_blank">Дом на Львовской для приятного отдыха</a></h2>
+    <a href="2.9.html " target="_blank"><img src="img/new/7/Без названия.jpg"/></a>
+    <h3>Цена:от 9000грн</h3>
+    <h3>Участок 2.5 сотки,жилая площадь 140м²</h3>
+    <h3>Для отдыха и мероприятий </h3>
+    <a href="2.9.html " target="_blank" class="button">Подробнее</a>
+  </div>
+  <div class="house-card">
+    <h2><a href="2.10.html" target="_blank">Дом с бассейном и джакузи в Совиньоне</a></h2>
+    <a href="2.10.html " target="_blank"><img src="img/new/8/Без названия.jpg"/></a>
+    <h3>Цена:500$</h3>
+    <h3>Участок 2.5 сотки,жилая площадь 95м²</h3>
+    <h3>Для отдыха и мероприятий </h3>
+    <a href="2.10.html " target="_blank" class="button">Подробнее</a>
+  </div>
+  <div class="house-card">
+    <h2><a href="2.11.html" target="_blank">Дом у моря с 5-ю спальнями и бассейном</a></h2>
+    <a href="2.11.html " target="_blank"><img src="img/new/9/Без названия.jpg"/></a>
+    <h3>Цена:10000</h3>
+    <h3>Участок 4 сотки,жилая площадь 380м²</h3>
+    <h3>Для отдыха и мероприятий </h3>
+    <a href="2.11.html " target="_blank" class="button">Подробнее</a>
   </div>
   <!-- Вставьте остальные карточки домов аналогичным образом -->
 </div>
