--- a/1.5.html
+++ b/1.5.html
@@ -167,7 +167,7 @@
         Вилла возле моря на 10 станции.<br>
 Дом площадью 450 м2, участок 12 соток.<br>  
 От дома 50 метров до пляжа. В Доме 4 шикарные спальни (из каждой вид на море) Просторный зал.<br>
-Цена 40000грн
+Цена 35150грн<br>Посуточно: 01.06-26.06: 35 150 грн 27.06-30.09: 47 500 грн
       </p>
     </div>
   </div>
