--- a/2.4.html
+++ b/2.4.html
@@ -144,24 +144,11 @@
     <div class="text-container">
         <div class="text-wrap">
             <p class="centered-text">
-                Гостевой дом в Одессе.(Котовского)
-                Для Вашего отдыха:<br>
-                2 номера вместительностью 4 человека каждый с индивидуальным санузлом и общей кухней
-
-                1 номер двухэтажный с видом на бассейн вместительностью 4 человека, с индивидуальным санузлом и индивидуальной кухней и сауной.
-
-                Оснащение номеров: душ, туалет, кондиционер, телевизор, интернет и кухня, постельное белье, стиральная машина.
-
-                На территории гостевого дома имеется бассейн, зона отдыха в саду с летней мебелью, зона мангала.<br>
-
-                Апартаменты расположены в 15 минутах от моря, в районе пляжа Лузановка, расстояние до пляжа 1000 метров.
-
-                Возможно встреча на вокзале и трансфер.
-
-                Для личного транспорта имеется недалеко охраняемая стоянка
-                Рядом супермаркет и остановка общественного транспорта.<br>
-
-
+              Дом на поселке Котовского. Общая площадь 170 м2. Участок 6 соток. 
+В доме 3 спальни каждая вмещает по 4 человека, 3 с/у, 2 кухни и сауна. В каждом комнате кондиционер. 
+На территории есть бассейн, зона отдыха в саду с летней мебелью, зона мангала.
+Дом расположены в 15 минутах от моря, в районе пляжа Лузановка, расстояние до пляжа 1000 метров. Возможно встреча на вокзале и трансфер.
+                Для личного транспорта имеется недалеко охраняемая стоянка Рядом супермаркет и остановка общественного транспорта.
             </p>
         </div>
     </div>
