--- a/2.10.html
+++ b/2.10.html
@@ -149,38 +149,13 @@
     <div class="text-container">
         <div class="text-wrap">
             <p class="centered-text">
-                Современный и стильный дом построен в одном уровне без лестниц, что удобно для отдыха с детьми да и просто для себя)
-                Мебель и техника новые новые и в идеальном состоянии.
-                Дом состоит из трёх зон:
-                Зона спален:
-                - Спальня #1 с двуспальной кроватью, кондиционером, TV, шкафом и косметическим столиком
-                - Спальня #2 с двуспальной кроватью, кондиционером, TV, шкафом и косметическим столиком
-                - Санузел (душевая, умывальник, инсталляция и стиральная машина)
-                - Кухня оснащённая всем необходимым (холодильник, плита, кофемашина, микроволновая печь,
-                посудомоечная машина, чайник, полный набор столовой и кухонной посуды)
-                - Гостиная с двуспальным раскладным диваном
-                - Smart TV, Wi-Fi
-                Зона отдыха:
-                - Бассейн с подогревом
-                - Удобные шезлонги с матрасами и зонтами
-                - Бунгало-лежак с теневой зоной
-                - Джакузи с Bluetooth-управлением и барной стойкой
-                - Обеденная зона со столом, диваном и креслами
-                - Bbq с шампурами, решёткой и опахало
-                - Smart TV, Wi-Fi
-                Зона гостиной:
-                - Просторный обеденный стол со стульями
-                - Большая и полностью оборудованная кухня (холодильник, плита, духовой шкаф, посудомоечная машина, микроволновая печь, чайник,
-                кухонная и сервировочная посуда, а также небьющаяся посуда для бассейна)
-                - Большой раскладывающийся диван
-                - Санузел (душевая, умывальник, инсталляция и стиральная машина)
-                - Smart TV, Wi-Fi
-                Имеется парковка для авто перед домом.
-                Месторасположение:
-                Коттедж расположен в тихом, охраняемом и не проездном месте возле кооператива Парк Совиньон.
-                В пешей доступности находятся супермаркет «Таврия В», минимаркет, аптека, отделение Новой Почты, кафе, ресторан и многое другое.
-                До моря на машине менее 5 минут.
-                Аренда от 3-х суток до 6-7 человек.
+                Дом в Совиньон площадью 95 м2, участок 2.5 сотки 
+В доме есть 2 спальни: Первая Спальня с двуспальной кроватью, кондиционером, TV, шкафом и косметическим столиком - Спальня #2 с двуспальной кроватью, кондиционером, TV, шкафом и косметическим столиком. В с/у есть душевая, умывальник, инсталляция и стиральная машина. 
+На кухне есть холодильник, плита, кофемашина, микроволновая печь, посудомоечная машина, чайник, полный набор столовой и кухонной посуды. 
+Гостиная с двуспальным раскладным диваном - Smart TV, Wi-Fi
+Зона отдыха: - Бассейн с подогревом - Удобные шезлонги с матрасами и зонтами - Бунгало-лежак с теневой зоной - Джакузи с Bluetooth-управлением и барной стойкой. Обеденная зона со столом, диваном и креслами. Bbq с шампурами, решёткой и опахало. 
+Имеется парковка для авто перед домом. 
+До моря на машине менее 5 минут. Аренда от 3-х суток до 6-7 человек.
             </p>
         </div>
     </div>
