--- a/index.html
+++ b/index.html
@@ -414,19 +414,19 @@
     <a href="2.6.html " target="_blank" class="button">Подробнее</a>
   </div>
   <div class="house-card">
-    <h2><a href="2.7.html" target="_blank">Стильный дом VIP уровня в Совиньоне</a></h2>
+    <h2><a href="2.7.html" target="_blank">Стильный дом в Совиньоне</a></h2>
     <a href="2.7.html " target="_blank"><img src="img/new/5/Без названия.jpg"/></a>
     <h3>Цена:600$</h3>
     <h3>Участок 8 соток,жилая площадь 320м²</h3>
-    <h3>Для отдыха и мероприятий </h3>
+    <h3>Для семейного отдыха и семейных мероприятий </h3>
     <a href="2.7.html " target="_blank" class="button">Подробнее</a>
   </div>
   <div class="house-card">
-    <h2><a href="2.8.html" target="_blank">Комфортабельный дом с бассейном в Совиньоне</a></h2>
+    <h2><a href="2.8.html" target="_blank">Дом с бассейном в Совиньоне</a></h2>
     <a href="2.8.html " target="_blank"><img src="img/new/6/Без названия.jpg"/></a>
     <h3>Цена:400$</h3>
     <h3>Участок 10 соток,жилая площадь 180м²</h3>
-    <h3>Для отдыха и мероприятий </h3>
+    <h3>Для семейного отдыха и семейных мероприятий </h3>
     <a href="2.8.html " target="_blank" class="button">Подробнее</a>
   </div>
   <div class="house-card">
@@ -442,7 +442,7 @@
     <a href="2.10.html " target="_blank"><img src="img/new/8/Без названия.jpg"/></a>
     <h3>Цена:500$</h3>
     <h3>Участок 2.5 сотки,жилая площадь 95м²</h3>
-    <h3>Для отдыха и мероприятий </h3>
+    <h3>Для семейного отдыхай </h3>
     <a href="2.10.html " target="_blank" class="button">Подробнее</a>
   </div>
   <div class="house-card">
