--- a/index.html
+++ b/index.html
@@ -390,9 +390,9 @@
     <a href="2.3.html " target="_blank" class="button">Подробнее</a>
   </div>
   <div class="house-card">
-    <h2><a href="2.4.html" target="_blank">Посуточно номера с бассейном</a></h2>
+    <h2><a href="2.4.html" target="_blank">Дом с бассейном на поселке</a></h2>
     <a href="2.4.html " target="_blank"><img src="img/new/2/Без названия.jpg"/></a>
-    <h3>Цена:1600грн</h3>
+    <h3>Цена:от 6000грн</h3>
     <h3>Участок 6 сток,Дом 30м²</h3>
     <h3>Для отдыха</h3>
     <a href="2.4.html " target="_blank" class="button">Подробнее</a>
