--- a/index.html
+++ b/index.html
@@ -453,6 +453,14 @@
     <h3>Для отдыха и мероприятий </h3>
     <a href="2.11.html " target="_blank" class="button">Подробнее</a>
   </div>
+  <div class="house-card">
+    <h2><a href="2.12.html" target="_blank">Дом с бассейном и сауной</a></h2>
+    <a href="2.12.html " target="_blank"><img src="img/new/10/IMG_8903.PNG"/></a>
+    <h3>Цена:500- 1000$</h3>
+    <h3>Участок 7 соток,жилая площадь 500м²</h3>
+    <h3>Для отдыха</h3>
+    <a href="2.12.html " target="_blank" class="button">Подробнее</a>
+  </div>
   <!-- Вставьте остальные карточки домов аналогичным образом -->
 </div>
 </body>
